cmake_minimum_required(VERSION 3.17)
project(DS_Algo_CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(DS_Algo_CPP
        ArrayList.cpp MultiD_Arrays.cpp RemoveEven.cpp MergeArrays.cpp MergeSortedArrays.cpp cmake-build-debug/TwoSum_LeetCode.cpp cmake-build-debug/ProductOfElements.cpp FindFirstUnique.cpp FindSecondMaximum.cpp)
